rhine-common: re-enable "Eject SD card" option
Needed after http://review.cyanogenmod.org/62708/

Change-Id: I74a2084fa545001280318f98ad41c33901a3c04d

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -156,4 +156,7 @@
 
     <!-- Enable lockscreen translucent decor -->
     <bool name="config_enableLockScreenTranslucentDecor">true</bool>
+
+    <!-- SD card is hot-pluggable on this platform -->
+    <bool name="config_batterySdCardAccessibility">true</bool>
 </resources>
